支持文章摘要主题切换

--- a/src/main/resources/extensions/settings.yaml
+++ b/src/main/resources/extensions/settings.yaml
@@ -80,6 +80,13 @@ spec:
           key: beginningText
           value: "这篇文章介绍了"
           help: "默认为“这篇文章介绍了”，你可以自定义开头语。"
+        - $formkit: text
+          label: 摘要主题
+          name: summaryTheme
+          id: summaryTheme
+          key: summaryTheme
+          value: "default"
+          help: "切换文章摘要主题，详情请见 https://postchat.zhheo.com/theme.html"
     - group: chat
       label: 智能对话
       formSchema:
